# ChangeLog for dev-db/kexi
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/kexi/Attic/ChangeLog,v 1.6 2005/01/01 17:34:18 eradicator Exp $

  11 Sep 2004; Daniel Ahlberg <aliz@gentoo.org> kexi-0.1_beta4.ebuild:
  Added amd64 keyword, closing #62064.

*kexi-0.1_beta4 (16 Jul 2004)

  16 Jul 2004; Carsten Lohrke <carlo@gentoo.org> +kexi-0.1_beta4.ebuild:
  version bump

  30 May 2004; Luca Barbato <lu_zero@gentoo.org> kexi-0.1_beta3.ebuild:
  Marked ~ppc

*kexi-0.1_beta3 (25 May 2004)

  25 May 2004; Caleb Tennis <caleb@gentoo.org> +metadata.xml,
  +kexi-0.1_beta3.ebuild:
  Initial import - bug #49875
