@@ -1,8 +1,7 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/kexi/Attic/kexi-0.1_beta3.ebuild,v 1.4 2005/01/01 17:34:18 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/kexi/Attic/kexi-0.1_beta3.ebuild,v 1.5 2005/06/03 14:51:55 greg_g Exp $
 inherit kde
-need-kde 3.2
 
 MY_P=${P/_beta/beta}
 S=${WORKDIR}/${MY_P}
@@ -16,3 +15,7 @@ IUSE=""
 SLOT="0"
 KEYWORDS="~x86 ~ppc"
 
+DEPEND="!>=app-office/koffice-1.4_rc
+	!app-office/kexi"
+
+need-kde 3.2
