@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/kexi/Attic/kexi-0.1_beta4.ebuild,v 1.3 2005/01/01 17:34:18 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/kexi/Attic/kexi-0.1_beta4.ebuild,v 1.4 2005/06/03 14:51:55 greg_g Exp $
 
 inherit kde
 
@@ -15,5 +15,8 @@ SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="~x86 ~ppc ~amd64"
 IUSE=""
+
+DEPEND="!>=app-office/koffice-1.4_rc
+	!app-office/kexi"
 
 need-kde 3.2
